RESOLVED FIXED76213
Web Inspector: Disconnecting the front-end does not disable profiling.
https://bugs.webkit.org/show_bug.cgi?id=76213
Summary Web Inspector: Disconnecting the front-end does not disable profiling.
Konrad Piascik
Reported 2012-01-12 14:17:34 PST
It is possible to disable developer extras without disabling profiling. This leads to an assertion failure in JSDOMWindowBase.cpp. ASSERT(enabled || !supportsProfiling(thisObject)); from IRC: [17:04:06] <olliej> kpiascik: technically the assertion isn't harmful, but it wil mean poor performance and poor memory usage We should disable profiling when the front-end is detached.
Attachments
patch (1.87 KB, patch)
2012-01-13 06:17 PST, Konrad Piascik
pfeldman: review-
updated patch (1.68 KB, patch)
2012-01-13 07:11 PST, Konrad Piascik
no flags
Konrad Piascik
Comment 1 2012-01-13 06:17:26 PST
Pavel Feldman
Comment 2 2012-01-13 06:54:57 PST
Comment on attachment 122420 [details] patch View in context: https://bugs.webkit.org/attachment.cgi?id=122420&action=review > Source/WebCore/inspector/InspectorController.cpp:236 > + disableProfiler(); You should call disable() from within InspectorProfilerAgent::clearFrontend() instead.
Konrad Piascik
Comment 3 2012-01-13 07:11:37 PST
Created attachment 122427 [details] updated patch
WebKit Review Bot
Comment 4 2012-01-13 09:43:30 PST
Comment on attachment 122427 [details] updated patch Clearing flags on attachment: 122427 Committed r104945: <http://trac.webkit.org/changeset/104945>
WebKit Review Bot
Comment 5 2012-01-13 09:43:35 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.