Web Inspector: Disconnecting the front-end does not disable profiling. https://bugs.webkit.org/show_bug.cgi?id=76213

Patch by Konrad Piascik <kpiascik@rim.com> on 2012-01-13
Reviewed by Pavel Feldman.

Not testable.

* inspector/InspectorProfilerAgent.cpp:
(WebCore::InspectorProfilerAgent::clearFrontend):

Canonical link: https://commits.webkit.org/93096@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@104945 268f45cc-cd09-0410-ab3c-d52691b4dbfc